--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:mysql://localhost:3306/board
     username: root
     password: 1q2w3e4r%T
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
