--- a/todo/pom.xml
+++ b/todo/pom.xml
@@ -58,6 +58,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.23</version>
+		</dependency>
 	</dependencies>
 
 	<build>
