--- a/board/pom.xml
+++ b/board/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>khj.side</groupId>
-	<artifactId>board</artifactId>
+	<artifactId>half</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>board</name>
 	<description>Demo project for Spring Boot</description>
